<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <Button
        android:id="@+id/calculator_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="529dp"
        android:layout_marginBottom="154dp"
        android:onClick="onCalculate"
        android:text="@string/calculator_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/calculator_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:ems="10"
        android:hint="@string/calculator_num2"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/calculator_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/calculator_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/calculator_num1"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/calculator_operator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/calculator_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/calculator_result"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/calculator_num1"
        app:layout_constraintStart_toStartOf="@+id/calculator_num1"
        app:layout_constraintTop_toBottomOf="@+id/calculator_welcome" />

    <Spinner
        android:id="@+id/calculator_operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="165dp"
        android:entries="@array/operators"
        app:layout_constraintBottom_toTopOf="@+id/calculator_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculator_result" />

    <TextView
        android:id="@+id/calculator_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        android:text="@string/calculator_welcome"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/calculator_result"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>